# fortuna

./: .env.example  .gitignore  CLAUDE.md  README.md  ai_engine.py  app.py  charts.py  database.py  market_data.py  package-lock.json  package.json  requirements.txt  seed.py
.github/workflows/: release.yml
.streamlit/: config.toml
components/: __init__.py  dataframes.py  formatting.py  metrics.py
pages/: analysis.py  dividends.py  planner.py  portfolio.py  transactions.py
scripts/: build_sidecar.py  fortuna_launcher.py  pyi_rth_metadata_fix.py
services/: __init__.py  analysis.py  dividends.py  planner.py  portfolio.py
src-frontend/: index.html
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
views/: analysis.py  dividends.py  logs.py  planner.py  portfolio.py  settings.py  transactions.py
