[package]
name = "fortuna"
version = "0.1.0"
description = "Fortuna — Personal ASX Portfolio Tracker"
authors = ["Fortuna"]
edition = "2021"

[lib]
name = "fortuna_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
